--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ python:
 
 install:
     - pip install coveralls
+    - pip install -r requirements.txt
+
+script: nosetests  --with-coverage
 
 after_success:
     - coveralls
