--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 
 install:
     - pip install coveralls
-    - pip install -r requirements.txt
+    - pip install -r dev-requirements.txt
 
 script: nosetests  --with-coverage
 
